--- a/styles/style.css
+++ b/styles/style.css
@@ -6,20 +6,36 @@
 
 .banner{
     width: 100%;
-    height: 250px;
+    height: 300px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    background: url('../images/banner-sm.png');
+    background: url('../images/banner2.gif');
 }
 
-.navbar-nav{
-    padding: 40px 20px;
+.navbar-collapse{
+    padding: 10px;
+}
+
+.navbar {
+    text-align: center;
+}
+
+.navbar-nav {
+    margin: 0 auto;
+    display: flex;
+}
+
+.logo{
+    width: 40px;
+}
+
+.nav-item{
+    padding: 0 10px;
 }
 
 .nav-link{
-    font-size: 20px;
-    padding: 10px 0;
+    font-size: 18px;
     color: #0F2244;
 }
 
@@ -40,10 +56,16 @@ h2{
     background:#E9E8E8;
 }
 
+.about-us h5{
+    color: #F97B2D;
+    padding: 10px;
+}
+
 .about-cta{
     position: absolute;
     margin-top: 45px;
     right: 0;
+    bottom: -10px;
 }
 
 .plus-icon, .plus-txt {
@@ -59,7 +81,20 @@ h2{
     text-decoration: none;
 }
 
-.services, .blog, .clients-reviews{
+.services h4, .blog h4{
+    font-weight: bold;
+}
+
+.cta:hover{
+    color: #F97B2D;
+}
+
+.blog .fa:hover {
+    color: #F97B2D;
+}
+
+.services, .blog, 
+.clients-reviews{
     margin-top: 80px;
 }
 
@@ -77,12 +112,17 @@ h2{
     padding: 20px;
 }
 
+.blog-item .cta{
+    color: #F97B2D;
+}
+
 .service-items, .blog-items{
     display: grid;
     grid-gap: 20px;
 }
 
-.blog-item, .service-item, .clients-reviews{
+.blog-item, .service-item, 
+.clients-reviews{
     padding: 40px 20px;
     background: #E9E8E8;
 }
@@ -95,6 +135,12 @@ h2{
     color: #F97B2D;
     font-size: 14px;
     text-decoration: none;
+}
+
+.service-item p, 
+.blog p, 
+.about-us p{
+    color: #333;
 }
 
 .clients-reviews article{
@@ -124,9 +170,17 @@ h2{
     border-bottom-right-radius: 40px;
 }
 
-.contact-form{
+.footer-info{
     width: 350px;
     margin: 0 auto;
+    display: grid;
+    grid-gap: 20px;
+    align-items: center;
+    justify-content: center;
+}
+
+.contact-form{
+    width: 100%;
 }
 
 .contact-form label{
@@ -147,7 +201,7 @@ h2{
     width: 100%;
     padding: 10px;
     border: none;
-    margin-top: 5px;
+    margin-top: 15px;
     font-weight: bold;
     color: #0F2244;
     border-radius: 10px;
@@ -162,6 +216,13 @@ h2{
 
 .contact-info strong{
     color: #F97B2D;
+}
+
+.location-map{
+    width: 100%;
+    height: 200px;
+    margin: 0 auto;
+    margin-top: 10px;
 }
 
 #myBtn {
@@ -189,12 +250,11 @@ h2{
 
     .banner{
         height: 400px;
-        background: url("../images/banner-md.png");
     }
 
     .about-us{
         width: 400px;
-        margin-top: -150px;
+        margin-top: -200px;
         margin-left: 350px;
         position: relative;
     }
@@ -223,7 +283,7 @@ h2{
     }
 
     .service-items-wrapper{
-        margin-top: -300px;
+        margin-top: -320px;
     }
 
     .clients-reviews p{
@@ -231,22 +291,25 @@ h2{
         color: #0F2244;
     }
 
-    .contact-form{
+    .footer-info{
         width: 450px;
     }
 }
 
 @media(min-width:1024px){
 
+    .logo{
+        width: 55px;
+    }
+
     .banner{
-        height: 420px;
-        background: url("../images/banner-lg.png");
+        background: url('../images/banner.jpg');
     }
 
     .about-us{
         width: 550px;
         margin-left: 450px;
-        padding: 80px 40px;
+        padding: 60px 40px;
     }
 
     .about-us h2{
@@ -262,8 +325,10 @@ h2{
         padding: 60px 100px;
     }
 
-    .contact-form{
-        width: 600px;
+    .footer-info{
+        width: 800px;
+        grid-column-gap: 100px;
+        grid-template-columns: repeat(2, 1fr);
     }
 
     .submit-btn:hover{background: #F97B2D;}
@@ -275,7 +340,7 @@ h2{
 
     .about-us{
         width: 600px;
-        margin-left: 450px;
+        margin-left: 500px;
     }
 
     .service-items-wrapper, .blog-items{
@@ -286,7 +351,7 @@ h2{
         grid-template-columns: repeat(3, 1fr);
     }
 
-    .contact-form{
+    .footer-info{
         width: 800px;
     }
 }
