navbar height changed

--- a/styles/style.css
+++ b/styles/style.css
@@ -14,7 +14,8 @@
 }
 
 .navbar-collapse{
-    padding: 10px;
+    padding: 20px;
+    min-height: 90vh;
 }
 
 .navbar {
@@ -247,7 +248,9 @@ h2{
   }
 
 @media (min-width:768px) {
-
+    .navbar-collapse{
+        min-height: auto;
+    }
     .banner{
         height: 400px;
     }
